+content & icons from background to before

--- a/13century/index.html
+++ b/13century/index.html
@@ -40,6 +40,11 @@
 <main class="import_Data flex">
 <div class="links">
   <a href="http://geacron.com/home-ru/?lang=ru">geacron.com</a><br>
+  <a href="https://www.armmuseum.ru/maps-gallery/">armmuseum</a><br>
+  <a href="https://web.nli.org.il/sites/NLIS/en/Maps">nli.org.il</a><br>
+  <a href="https://gallerix.ru/album/Antique-Maps#w6">gallerix</a><br>
+  <a href="http://oldraremaps.narod.ru/index.html">oldraremaps</a><br>
+  <a href="https://cont.ws/@adeptdao/725192">adeptdao</a><br>
 </div>
 <div>
   <a href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B8_%D0%A1%D1%8F"><h3>Тангуты ( Си Ся )Western Xia</h3></a> , <a href="https://unicode-table.com/ru/blocks/tangut/">Тангутское письмо</a><br>
@@ -152,6 +157,30 @@
 
 <div>
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B0%D0%BB%D0%B8%D1%86%D0%BA%D0%BE-%D0%92%D0%BE%D0%BB%D1%8B%D0%BD%D1%81%D0%BA%D0%BE%D0%B5_%D0%BA%D0%BD%D1%8F%D0%B6%D0%B5%D1%81%D1%82%D0%B2%D0%BE">Галицко-Волынское княжество. Galicia–Volhynia</a></h3>
+</div>
+
+<div>
+  <h3>Карты исторические</h3>
+  <a href="http://history-maps.ru/">history-maps.ru</a><br>
+  География К. Птоломея <br>
+  Карта Аль Мамуна. до 883 г. <br>
+  Карта мира Абу'л-Хасан Али ибн Аби Саид ибн Йунус ас-Садафи ал-Мисри. 1008 <br>
+  <a href="http://pervokarta.ru/astrolab/albiruni.jpg">1030 Al-Biruni</a><br>
+  Карта мира Насир ад-Дин Абу Джафар Мухаммад ат-Туси 1261 <br>
+  карте Паулина 1321 <br>
+  1320—1321 гг. у географов Марино Санудо и Пьетро Висконте <br>
+  Карта мира Исмаил ибн Али ал-Аййуби Абу'л-Фида. 1331 <br>
+  Каталонском атласе 1375 <br>
+  венецианской карте 1460 <br>
+  <a href="http://pervokarta.ru/framauro/fra.htm">1459 framauro</a><br>
+  Олаф Магнус – Carta Marina, 1539 <br>
+  1562 Antoni Jenkinson (Antonio Ienkensono) <br>
+  Абрахам Ортелий - Ост-Индия, 1570 <br>
+  Antony Lafreri 1572 <br>
+  1574_abraham-ortelius asia<br>
+  Абрахам Ортелий - Китай, 1584 <br>
+  Абрахам Ортелий - Тихий океан, 1589 <br>
+  Ян ван Линсхотен – Аравия и Ост-Индия, 1596 <br>
 </div>
 
 <div class="img200">
