--- a/13century/warband.html
+++ b/13century/warband.html
@@ -12,7 +12,7 @@
 <div>
     <h3>Cartographer</h3>
     <a href="https://bitbucket.org/Swyter/cartographer/wiki/Home">Cartographer documentation</a><br>
-    для конвертации из .txt в .obj и обратно, .obj редактировал в Wings 3D
+    для конвертации map.txt в .obj и обратно, .obj редактировал в Wings 3D
 </div>
 
 <div>
@@ -20,10 +20,4 @@
     Менять/добавлять города и поселения <br>
     pt_town_22 <br>
     give_center_lord <br>
-</div>
-
-<div>
-    <h3>MapEditor</h3>
-    <img src="../icons/x.svg" alt="">
-    <a href="https://commando.com.ua/other/gaids/2807-mapeditor-085-redaktor-globalnoy-karty.html">гайд про MapEditor</a><br>
 </div>
