--- a/programming/index.html
+++ b/programming/index.html
@@ -7,43 +7,9 @@
   <title>Программирование</title>
   <link rel="SHORTCUT ICON" href="../icons/favicon.ico">
   <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="stylesheet" href="../CSS/progr.css">
   <link rel="manifest" href="../manifest.webmanifest">
   <!-- <script src="../JS/lazysizes.min.js" async=""></script> -->
-  <style>
-h2 {margin-top: 0px}
-.pycon {
-    background: linear-gradient(135deg ,#3b709c 40%, #fad149 60%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-s { color: red; }
-
-[href*="developer.mozilla"] {
-    background: url(https://developer.mozilla.org/static/img/favicon32.7f3da72dcea1.png) no-repeat 0;
-    background-size: 16px;
-    padding-left: 20px;
-}
-[href*="itvdn"] {
-    background: url(../icons/itvdn.svg) no-repeat 0;
-    background-size: 16px;
-    padding-left: 20px;
-}
-main [href*="github"] {
-    background: url(https://github.githubassets.com/favicon.ico) no-repeat 0;
-    background-size: 16px;
-    padding-left: 20px;
-}
-[href*="frontendconf.ru"] {
-    background: url(https://frontendconf.ru/i/frontendconf/2019/favicon.ico) no-repeat 0;
-    background-size: 16px;
-    padding-left: 20px;
-}
-[href*="habr.com"] {
-    background: url(https://habr.com/images/favicon-16x16.png) no-repeat 0;
-    background-size: 16px;
-    padding-left: 20px;
-}
-  </style>
   <link rel="stylesheet" href="../CSS/highlight.css">
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.16.2/build/highlight.min.js" async></script>
   <script src="../JS/main.js" type="module"></script>
@@ -212,6 +178,9 @@ main [href*="github"] {
     <a href="https://codepen.io"><img src="https://static.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" alt="codepen"></a>
     <a href="https://jsfiddle.net/"><img src="https://jsfiddle.net/img/favicon.png" alt="jsfiddle.net"></a>
     <a href="https://ideone.com"><img src="https://ideone.com/gfx2/img/favicon.png" alt="ideone"></a>
+    <br>
+    <a href="https://www.youtube.com/c/HolyJS/videos"><img src="https://holyjs-moscow.ru/assets/images/logo-gradient.svg" alt="HolyJS"></a>
+    <a href="https://www.youtube.com/c/FrontendChannel/videos"><b style="height: 32px; width: 32px; background: #f7db00; font-size: 20px; color: #000; text-align: end; line-height: 49px;">FC</b></a>
 </div>
 
 <div><ul>
@@ -282,9 +251,8 @@ main [href*="github"] {
     <a href="https://www.reactivemanifesto.org/ru">Манифест Реактивных Систем</a><br>
     <a href="https://habr.com/en/post/249279/">Flux For Stupid People</a><br>
     <a href="https://medium.com/russian/%D1%80%D1%83%D0%BA%D0%BE%D0%B2%D0%BE%D0%B4%D1%81%D1%82%D0%B2%D0%BE-%D0%BF%D0%BE-flux-%D0%B2-%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%D1%85-d59c03562ea">Руководство по Flux в картинках</a><br>
-    Redux Observable<br>
-    RxJS<br>
     Svelte , <a href="https://cloud.mail.ru/public/4aJ9/qqyXc2dnf/">Svelte Ru Meetup 2020</a><br>
+    <a href="https://ru.svelte.dev/">ru.svelte.dev</a><br>
 </div>
 
 <div><h2>Квантовые вычисления</h2>
@@ -294,7 +262,7 @@ main [href*="github"] {
     Сфера Блоха
 </div>
 
-<div class="img32"><h2>Status</h1>
+<div class="img32"><h2>Status</h2>
     <ul>
         <li><a href="https://www.chromestatus.com/"><img src="https://www.chromestatus.com/static/img/chrome_logo.svg" alt="chromestatus"></a></li>
         <li><a href="https://platform-status.mozilla.org/"><img src="https://az813057.vo.msecnd.net/images/firefox_32x32.6d127bb.png" alt="status mozilla"></a></li>
@@ -355,6 +323,7 @@ main [href*="github"] {
         <li><a href="https://www.awwwards.com/"><img src="https://www.awwwards.com/favicon.ico" alt="awwwards"> awwwards.com</a></li>
         <li><a href="http://www.cssdsgn.com"><img src="https://www.cssdsgn.com/icons/favicon-32x32.png" alt="cssdsgn"> cssdsgn.com</a></li>
         <li><a href="http://www.unsplash.com"><img src="https://unsplash.com/favicon-16x16.png" alt="unsplash"> unsplash.com</a></li>
+        <li><a href="https://www.flaticon.com">flaticon</a></li>
         <li><a href="https://icons8.com"><img src="https://photos.icons8.com/vue-static/moose/favs/favicon.ico" alt="icons8"> icons8.com</a></li>
         <li><a href="https://unicode-table.com/">Таблица символов Юникода</a></li>
         <li><a href="https://dribbble.com/search?q=cards">dribbble.com</a></li>
@@ -566,8 +535,10 @@ public class Home {
 </div>
 
 <div>
-    <a href="https://mini-haber.web.app/">mini-haber.web.app</a><br>
+    <a href="https://grunvald-shop.web.app/">Shop App</a>
+    <a href="https://mini-haber.web.app/">Mini Haber</a><br>
     <!-- <a href="../nitro/" target="_blank">Nitro</a><br> -->
+    <a href="primery/visibility/" target="_blank">My Travel Site</a><br>
     <a href="primery/skillboxLanding/" target="_blank">skillboxLanding</a><br>
     <a href="primery/about/" target="_blank">about</a><br>
     <a href="https://codepen.io/leonardasf1/pen/QegKyX/">video-playerJS</a><br>
