--- a/programming/react.html
+++ b/programming/react.html
@@ -8,27 +8,34 @@
     <a href="https://ru.reactjs.org/docs/static-type-checking.html">ru.reactjs.org</a><br>
     <a href="https://redux.js.org/">redux.js.org</a><br>
     <a href="https://nextjs.org/"><img src="https://nextjs.org/static/favicon/favicon-32x32.png" alt="next.js">nextjs.org</a><br>
+    <a href="https://habr.com/en/post/269831/">С 0 до 1. Разбираемся с Redux</a><br>
 </div>
 
 <div>
-  <a href="https://youtu.be/0UbkJ6Izue8">React: монтируй, демонтируй, обновляй. ШРИ2020</a><br>
-  <a href="https://youtu.be/SnmfK4YuGlk">React-приложение. ШРИ2020</a><br>
-    <a href="https://itvdn.com/ru/video/react-essential">React Essential (2020)</a><br>
-    * <a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential Without ES6 (2016)</a> <!-- <a href="primery/react1.html">result</a> -->
-    <a href="https://github.com/krambertech/react-essential-course">krambertech/</a><br>
-    <a href="https://youtu.be/-k8w0x-rp80">Уроки React JS. webDeveloperBlog.2020</a><br>
-    * <a href="https://youtu.be/xJZa2_aldDs">React JS. Полный Курс 2020</a><br>
-    * <a href="https://youtu.be/Z7_7xvJ7Cjc">React. Иммутабельность данных</a><br>
-    * <a href="https://youtu.be/bFVAVXWySzM">React Hooks - зачем придумали</a><br>
-    * <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3n6YO3BDSQIg35GGKn_ImFD">Введение в React Hooks .2019</a><br>
-    * <a href="https://youtu.be/V1rhxheJg4A">React JS. Контекст, Хуки, Анимации, Деплой</a><br>
-    * <a href="https://youtu.be/OvLWWvjoi8s">React JS + TypeScript (+ React Router DOM)</a><br>
-    <a href="https://itvdn.com/ru/video/react_adv">React Advanced</a><br>
-    * <a href="https://youtu.be/G3GGXIhggGs">React Redux + Saga. Практический Курс</a><br>
-    <a href="https://habr.com/en/post/269831/">С 0 до 1. Разбираемся с Redux</a><br>
-    * <a href="https://youtu.be/YdYyYMFPa44">Redux. Полный Курс 2020</a><br>
-    <a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a><br>
-    <a href="https://youtu.be/6m950Hqr_eI">React и данные: Эффективные способы хранения и изменения стейта</a><br>
+    Видеоуроки:
+    <ul>
+        <li><a href="https://itvdn.com/ru/video/react-essential">React Essential (2020)</a></li>
+        <li>* <a href="https://itvdn.com/ru/video/react-js-essential">ReactJS Essential Without ES6 (2016)</a> <!-- <a href="primery/react1.html">result</a> -->
+            <a href="https://github.com/krambertech/react-essential-course">krambertech/</a></li>
+        <li><a href="https://youtu.be/-k8w0x-rp80">Уроки React JS. webDeveloperBlog.2020</a></li>
+        <li><a href="https://itvdn.com/ru/video/react_adv">React Advanced</a></li>
+        <li>* <a href="https://youtu.be/xJZa2_aldDs">React JS. Полный Курс 2020</a></li>
+        <li>* <a href="https://youtu.be/YdYyYMFPa44">Redux. Полный Курс 2020</a></li>
+        <li>* <a href="https://youtu.be/G3GGXIhggGs">React Redux + Saga. Практический Курс</a></li>
+        <li>* <a href="https://youtu.be/OvLWWvjoi8s">React JS + TypeScript (+ React Router DOM)</a></li>
+        <li>* <a href="https://youtu.be/V1rhxheJg4A">React JS. Контекст, Хуки, Анимации, Деплой</a></li>
+        <li><a href="https://itvdn.com/ru/video/isomorphic-application">Изоморфные приложения на React</a></li>
+        <li>* <a href="https://www.youtube.com/playlist?list=PLqKQF2ojwm3n6YO3BDSQIg35GGKn_ImFD">Введение в React Hooks .2019</a></li>
+        <li>* <a href="https://youtu.be/Z7_7xvJ7Cjc">React. Иммутабельность данных</a></li>
+        <li>* <a href="https://youtu.be/bFVAVXWySzM">React Hooks - зачем придумали</a></li>
+        <li></li>
+    </ul>
+    Доклады:
+    <ul>
+        <li><a href="https://youtu.be/0UbkJ6Izue8">React: монтируй, демонтируй, обновляй. ШРИ2020</a></li>
+        <li><a href="https://youtu.be/SnmfK4YuGlk">React-приложение. ШРИ2020</a></li>
+        <li><a href="https://youtu.be/6m950Hqr_eI">React и данные: Эффективные способы хранения и изменения стейта</a></li>
+    </ul>
 </div>
 
 <div>
@@ -44,9 +51,8 @@ yarn start
 yarn build
 
 npm install prop-types
-
-<a href="https://marketplace.visualstudio.com/items?itemName=dsznajder.es7-react-js-snippets">snippets</a>
     </code></pre>
+    <a href="https://marketplace.visualstudio.com/items?itemName=dsznajder.es7-react-js-snippets">snippets for VS Code</a>
 </div>
 
 <div>
@@ -61,7 +67,7 @@ ReactDOM.render(
     < App
         name="Igor"
         article={article}
-        onClick={activateLasers}
+        onClick={}
     />
   < /React.StrictMode>,
   document.getElementById('root')
@@ -80,6 +86,9 @@ const Example = (props) => {
 function Example(props) {
   // Тут мог бы быть ваш хук!
   return < h1>Привет, {props.name}< /h1>;
+}
+function Example({name}) {
+  return < h1>Привет, {name}< /h1>;
 }
 
 function NumberList(props) {
