--- a/programming/typescript.html
+++ b/programming/typescript.html
@@ -6,10 +6,9 @@
     <br>
     Видеоуроки:
     <ul>
-        <li><a href="https://itvdn.com/ru/video/typescript-fundamentals">TypeScript Fundamentals Updated (2018)</a></li>
+        <li>* <a href="https://itvdn.com/ru/video/typescript-fundamentals">TypeScript Fundamentals Updated (2018)</a></li>
         <li>* <a href="https://youtu.be/nyIpDs2DJ_c">TypeScript - Полный Курс за 70 минут (2019)</a></li>
         <li>* <a href="https://youtu.be/7NU6K4170As">Продвинутый TypeScript. Декораторы, Компилятор, Generic Types, Namespaces (2019)</a></li>
-        <li><a href="https://itvdn.com/ru/video/typescriptfundamentals">TypeScript Fundamentals (2016)</a></li>
     </ul>
     Доклады:
     <ul>
@@ -46,7 +45,7 @@ tsc --watch // (-w)
 
 : void
 : () => void
-: object
+: object // для типизации объектов использовать интерфейсы
 
 : never // error | infinity
 : null
