--- a/programming/golang.html
+++ b/programming/golang.html
@@ -10,6 +10,7 @@
 		<a href="https://itvdn.com/ru/video/golang">Видео уроки Golang (ITVDN)</a><br>
         <a href="https://geekbrains.ru/events/2287#">напишем на Go простой сканер погоды</a><br>
 		<a href="https://play.golang.org/">play.golang.org</a><br>
+      <a href="https://www.jetbrains.com/help/go/meet-the-product.html">GoLand IDE</a><br>
 		<a href="http://liteide.org/en/">liteIDE</a><br>
     <a href="https://www.youtube.com/channel/UCQBFSUV_BdxGCxeg9Th4EjQ/videos">Gopher School</a><br>
 		<a href="https://www.youtube.com/channel/UCq-OB01F8YnS-FJpeJRCvMQ/">GopherCon Russia</a><br>
@@ -35,7 +36,7 @@
   <pre><code class="bash">
 go run main.go //компиляция и запуск
 go build main.go //компиляция пакетов и зависимостей
-go build -o ../main.exe main.go
+go build -o ../main.exe main.go //в конкретную папку
 go clean //удаляет бинарник
 go help
 go fmt //форматирование кода
@@ -56,57 +57,74 @@ echo $GOROOT // где установен GO
 
   <details><summary>типы данных</summary>
   <pre><code>
+    int, int8, int16, int32, int64
+    uint, uint8,...
+    float32, float64 // 2.3456
+    string
+    bool
+    byte //символьное зн-е % (uint8)
+    rune
+    error
+  </code></pre>
+  </details>
+
+  <details>
+    <summary>объявление переменных</summary>
+    <pre><code>
 var age int = 12
 age2 := 12 // краткое объявление
-// int8, int16, int32, int64
-// uint, uint8,...
-var num float64 = 2.3456 // float32
+a, b := "v1", "v2"
 var web string = "itProger"
-var err error //error
-var rawSymbol byte = '\x25' 
-  //символьное зн-е % (uint8)
-var symbol rune = 'Г' // или '\u1043'
-fmt.Sprintf("%#U", 'Г')
+
 z:= 2 + 3i // комплексные числа
 yu:=`ddd
   dd`
-a, b := "v1", "v2"
 var (
   m0 int = 12
   m2     = "string"
   m3     = 23
 )
-const (
-  z1 = iota + 1 // 1
-  z2      // 2
+  </code></pre>
+  </details>
 
-  z3      // 4
-)
-
-fmt.Println(age, int(num), rawSymbol, z, a, b, m0, m2, m3 )
-fmt.Println(web, "is cool website\n\t", z1, z2, z3, yu)
-
-// Printf
-var isDone bool = true
-fmt.Printf("%t", isDone)
-
-%t-bool
-%d-int,uint,rune,byte
-%f-float64,float32
-%s-string
-%b-byte
-%v-all
-"hi\n\t"
-\n //новая линия
-\t //большой пробел
+  <details>
+    <summary>приведение</summary>
+    <pre><code>
 int(varName) //приведение к типу int
 string(symbol) // приведение к типу sting
   </code></pre>
 </details>
 
-<details><summary>if / switch</summary>
+  <details>
+    <summary>string</summary>
     <pre><code>
-// Условные операторы
+      len("Word") // 4 длина строки
+    </code></pre>
+  </details>
+
+  <details>
+    <summary>iota (enum)</summary>
+    <pre><code>
+const (
+  z1 = iota + 1 // 1
+  z2      // 2
+  _
+  z3      // 4
+)
+    </code></pre>
+  </details>
+
+  <details>
+    <summary>rune</summary>
+    <pre><code>
+//символы юникода , в ''
+      var symbol rune = 'Г' // или '\u1043'
+    </code></pre>
+  </details>
+
+  <details><summary>if / switch</summary>
+    <pre><code>
+// только явное преобразование!
 if age < 5 {}
 else if (age > 5) && (age <= 18) {}
 else {}
@@ -164,25 +182,31 @@ Loop:  // метка для выхода
     switch index {
       case 10:
         println()
-        goto Loop 
+        goto Loop
+      case 2:
+        goto Loop2
     }
   }
+Loop2:
+    fmt.Println()
   </code></pre>
 </details>
 
 <details><summary>Array</summary>
   <pre><code class="go">
 // у массивов фиксированная длина
-var arr[3] int
+var arr [3]int
 arr[0] = 45
 arr[1] = 97
 arr[2] = 76
-fmt.Println(arr[1], len(arr))
+var a4 [3 * 4]bool
 a3 := [...]int{3, 3, 3}
 nums := [3]float64 {4.23, 5.23, 98.1}
 
 var aa [3][3]int
 aa[1][1] = 1
+
+fmt.Println(arr[1], len(arr))
 </code>
 сортировка массива
 <code>
@@ -202,7 +226,7 @@ func main() {
   </code></pre>
 </details>
 
-<details><summary>Slice , <a href="https://habr.com/en/post/202948/" style="float: right">habr?</a></summary>
+<details><summary>Slice <a href="https://habr.com/en/post/202948/" style="float: right">habr?</a></summary>
   <pre><code>
 var s1 []int
 
@@ -212,6 +236,7 @@ s1 = append(s1, []int{10, 20, 30, 40}, arr[:]...)
 
 slName := []int{10, 20, 30, 40}
 
+    //копирование
 slName := make([]int, 6) //with len
 slName := make([]int, 6, 15) //with len & cap
 slName := make([]int, len(s1), len(s1))
@@ -226,12 +251,12 @@ newSlice := a[:]
 println(slName[2])
 
 len(slName) // длина
-cap(slName) // емкость
+cap(slName) // емкость (1,2,4,8,16,32,...)
 make() ?
   </code></pre>
 </details>
 
-<details><summary>Maps</summary>
+<details><summary>map (словарь)</summary>
   <pre><code>
 //объявленная но не инициализированная карта
 var mm map[string]string
@@ -268,7 +293,7 @@ package main
 import "fmt"
 
 var globalMap map[string]string
-func init() {
+func init() { //запускается до main
   globalMap = make(map[string]string)
   globalMap["myName"] = "Den"
 }
@@ -323,7 +348,7 @@ func main() {
 
 <details><summary>type</summary>
   <pre><code>
-//castom types
+//custom types
 type MyInt int
 type myType int64
 type library []string
@@ -388,7 +413,10 @@ import (
   _ "notUse"
 )
 fmt.Println(usr.UserName, UserName2)
+
 // для экспорта 1я буква заглавная
+package user
+var Username = "Den"
   </code></pre>
 </details>
 
@@ -413,6 +441,8 @@ func TestFactorial(t *testing.T) {
     t.Errorf("Factorial expected %v but got %v", globalVarResult, result)
   }
 }
+-------
+go test
   </code></pre>
 </details>
 
@@ -444,7 +474,7 @@ func funcName(s interface{}) {
   </code></pre>
 </details>
 
-<details><summary>& *</summary>
+<details><summary>& * указатели</summary>
   <pre><code>
 <a href="https://youtu.be/Gvf6b3ayaUo"></a>
 myInt := new(int)
@@ -546,13 +576,32 @@ import (
   </details>
   <details><summary>"fmt"</summary><pre>  
     <a href="https://golang.org/pkg/fmt/">golang.org/pkg/fmt/</a>
-
+<code>
   fmt.Errorf()
   fmt.Printf()
   fmt.Println()
   fmt.Scanln() //чтоб успели отработать горутины
   fmt.Sprintf()
-  </pre></details>
+
+fmt.Sprintf("%#U", 'Г')
+
+fmt.Println(age, int(num), rawSymbol, z, a, b, m0, m2, m3 )
+fmt.Println(web, "is cool website\n\t", z1, z2, z3, yu)
+
+// Printf
+fmt.Printf("%t", isDone)
+fmt.Printf("Факториал числа %d равен %d\n", n, f)
+
+%t-bool
+%d-int,uint,rune,byte
+%f-float64,float32
+%s-string
+%b-byte
+%v-all
+"hi\n\t"
+\n //новая линия
+\t //большой пробел
+  </code></pre></details>
   "math/rand"
   <details><summary>"time"</summary><pre>  
   time.Since(time.Now) //прошедшее время
@@ -563,4 +612,29 @@ import (
   <details><summary>"runtime"</summary><pre>  
   runtime.Stack(varName, false)
   </pre></details>
+  <details>
+    <summary>"strcony"</summary>
+  </details>
+</div>
+
+<div>
+  <details>
+    <summary>сортировка пузырьком</summary>
+    <pre><code>
+func main() {
+  nums := []int{2, 5, 1, 8, 7, 3, 4, 6, 9}
+  fmt.Printf("not sort %d \n", nums)
+
+  for i := 0; i < len(nums)-1; i++ {
+	for j := 0; j < len(nums)-i-1; j++ {
+      counter++
+	  if nums[j] > nums[j+1] {
+		nums[j], nums[j+1] = nums[j+1], nums[j]
+      }
+    }
+  }
+  fmt.Printf("sort %d count %d \n", nums, counter)
+}
+    </code></pre>
+  </details>
 </div>
