--- a/programming/tests.html
+++ b/programming/tests.html
@@ -6,12 +6,152 @@
   <a href="https://vk.com/video-147415323_456239150">Сергей Ястребов — «Автоматическое тестирование»</a><br>
 	<a href="https://youtu.be/24gtY5xze9g">Тесты. Часть 1 - Сергей Жигалов(2016)</a><br>
   <a href="https://vk.com/@yandex4developers-mutacionnoe-testirovanie">Мутационное тестирование</a><br>
-  <a href="https://learn.javascript.ru/testing-mocha">Автоматическое тестирование. Mocha</a><br>
-  unit-тесты<br>
-  e2e-тесты<br>
+</div>
+
+<div>
+  <pre><code>
+function expect(value) {
+    return {
+        toBe: exp => {
+            if (value === exp) {
+                console.log('Success')
+            } else {
+                console.error(`Value is ${value}, but expectation is ${exp}`)
+            }
+        }
+    }
+}
+const sum = (a, b) => a + b
+expect(sum(41, 1)).toBe(43)
+  </code></pre>
+</div>
+
+<div>
+  <h2>Jest</h2>
+  <br><a href="https://jestjs.io/ru/"><img src="../icons/jest.svg" alt="jestjs.io">
+  <a href="https://youtu.be/IEDe8jl5efU">Jest. Unit Тестирование в JavaScript (2020)</a><br><br>
+  <pre><code>
+    npm i -D jest
+    npm test // "scripts": { "test": "jest" }
+---------------------------
+const {sum, nativeNull} = require('./intro')
+
+describe('Sum function', ()=> {
+    test('should return sum of two values', () => {
+        expect(sum(1, 3)).toBe(4)
+        expect(sum(1, 3)).toEqual(4)
+    })
+
+    test('should return value correctly comparing to other', () => {
+        expect(sum(2, 3)).toBeGreaterThan(4)
+        expect(sum(2, 3)).toBeGreaterThanOrEqual(5)
+        expect(sum(2, 3)).toBeLessThan(6)
+    })
+    test('should sum 2 float values correctly', () => {
+        expect(sum(0.1, 0.2)).toBeCloseTo(0.3)
+    })
+})
+describe('Native null function', () => {
+    test('should returt false value null', () => {
+        expect(nativeNull()).toBe(null)
+        expect(nativeNull()).toBeNull()
+        expect(nativeNull()).toBeFalsy() // undefined, null, 0, ''
+        expect(nativeNull()).toBeDefined()
+        expect(nativeNull()).not.toBeTruthy()
+        expect(nativeNull()).not.toBeUndefined()
+    })
+})
+
+---------------------------
+
+const Lodash = require('./sync')
+
+let _ = new Lodash()
+
+describe('Lodash: compact', () => {
+
+    let array
+
+    beforeEach(() => {
+        array = [false, 42, 0, '', true, null, 'hello']
+    })
+    afterAll(() => {
+        _ = new Lodash()
+    })
+
+    test('should be defined', ()=> {
+        expect(_.compact).toBeDefined()
+        expect(_.compact).not.toBeUndefined()
+    })
+    test('should remove falsy values from array', () => {
+        const result = [42, true, 'hello']
+        expect(_.compact(array)).toEqual(result)
+    })
+    test('should NOT contain falsy values', () => {
+        expect(_.compact(array)).not.toContain(false)
+        expect(_.compact(array)).not.toContain(0)
+        expect(_.compact(array)).not.toContain('')
+        expect(_.compact(array)).not.toContain(null)
+    })
+})
+
+describe('Lodash: groupBy', () => {
+    test('should be defined', () => {
+        expect(_.groupBy).toBeDefined()
+        expect(_.groupBy).not.toBeUndefined()
+    })
+    test('should group array items by Math.floor', () => {
+        const array = [2.2, 2.4, 4.2, 3.1]
+        const result = {
+            2: [2.2, 2.4],
+            4: [4.2],
+            3: [3.1]
+        }
+        expect(_.groupBy(array, Math.floor)).toEqual(result)
+    })
+    test('should group array items by length', () => {
+        const array = ['one', 'two', 'three']
+        const result = {
+            5: ['three'],
+            3: ['one', 'two']
+        }
+        expect(_.groupBy(array, 'length')).toEqual(result)
+    })
+    test('should Not return array', () => {
+        expect(_.groupBy([], Math.trunc)).not.toBeInstanceOf(Array)
+    })
+})
+
+---------------------------
+
+describe('Ajax: echo', () => {
+    test('should return value async', async () => {
+        const result = await Ajax.echo('some data')
+        expect(result).toBe('some data')
+    })
+    test('should return value with promise', () => {
+        return Ajax.echo('some data').then(data => {
+            expect(data).toBe('some data')
+        })
+    })
+    test('should catch error with promise', () => {
+        return Ajax.echo().catch(err => {
+            expect(err).toBeInstanceOf(Error)
+        })
+    })
+    test('should catch error with promise', async () => {
+        try {
+            await Ajax.echo()
+        } catch (e) {
+            expect(e.message).toBe('error')
+        }
+    })
+})
+  </code></pre>
 </div>
 
 <div><h2>Mocha</h2>
+  <a href="https://learn.javascript.ru/testing-mocha">Автоматическое тестирование. Mocha</a><br>
 <pre><code>
 npm install mocha --save-dev -global
 mocha fileName-test.js -r spec //полный отчет
@@ -151,7 +291,7 @@ describe('Note page', () => {
 //оценивает покрытие кода тестами
 npm install -g istanbul
 istanbul cover _mocha
-</div>
+</code></pre></details></div>
 
 <div><h2><a href="https://jasmine.github.io/">Jasmine</a></h2>
 <a href="https://youtu.be/CUNP6L8ZbDo">Тестирование Javascript с Jasmine (2019)</a><br>
