icons from before-content to background

--- a/programming/index.html
+++ b/programming/index.html
@@ -169,7 +169,6 @@
 
 <div id="links">
     <a href="https://stepik.org/catalog?language=ru"><img src="https://stepik.org/static/classic/ico/favicon_32.png" alt="stepik"></a>
-    <a href="https://itvdn.com/ru/catalog" style="padding-left: 0; background: none"><img src="https://itvdn.com/Content/img/header/logo.svg" alt="itvdn"></a>
     <a href="https://loftblog.ru/"><img src="https://loftblog.ru/favicon/apple-touch-icon.png" alt="loftblog"></a>
     <a href="https://www.w3schools.com/">W3C</a>
     <a href="https://www.codewars.com/"><img src="https://www.codewars.com/favicon.ico" alt="codewars"></a>
@@ -223,6 +222,7 @@
     Elixir <br>
     Phoenix <br>
     Phoenix LiveView <br>
+    <img src="../icons/wiki.svg" alt="">
     <a href="https://youtu.be/QwL2XHXHQl4">Фронтенд без JS</a><br>
     <pre><code>
 <%    %>
