--- a/13century/index.html
+++ b/13century/index.html
@@ -86,8 +86,36 @@
 <div>
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%94%D0%B5%D0%BB%D0%B8%D0%B9%D1%81%D0%BA%D0%B8%D0%B9_%D1%81%D1%83%D0%BB%D1%82%D0%B0%D0%BD%D0%B0%D1%82">Делийский султанат</a></h3>
   язык персидский , ислам<br>
-  Бадаюн<br>
-  Дели<br>
+  <details>
+    <summary>Budaun</summary>
+    <pre><code>
+  Первым достоверным историческим событием,
+  связанным с ним, был его захват Кутб-уд-Дином
+  Айбаком в 1196 году, после чего он стал очень
+  важным постом на северной границе Делийской империи.
+  В 1223 году была построена внушительных размеров
+  мечеть, увенчанная куполом.
+    </code></pre>
+  </details>
+  Thanesar <br>
+  Delhi<br>
+  Mathura (очень древний город)<br><br>
+  <hr>
+  <details>
+    <summary>Multan</summary>
+    <code><br>
+  После смерти первого Мумлюкского Султана Qutb al-Din Aibak в 1210 году Мултан перешел под власть Nasiruddin Qabacha, который в 1222 году успешно отразил попытку вторжения Султана Jalal ad-Din Mingburnu из Хорезмийской империи, истоки которой уходили в Конье-Ургенч в современном Туркменистане.Кабача также отбил 40-дневную осаду города монгольскими войсками, пытавшимися захватить его. После смерти Кабачи в том же году тюркский царь Iltutmish, третий Султан Мамлюкской династии, захватил и затем аннексировал Мултан. Punjabi poet Baba Farid родился в селе Khatwal неподалеку от Мултана в 1200-х годах.
+      <br><br>
+  Карлугиды попытались вторгнуться в Мултан в 1236 году, В то время как монголы попытались захватить город в 1241 году после захвата Лахора - хотя они были отбиты. Затем монголы под командованием Sali Noyan успешно удержали город для выкупа в 1245-6 годах, прежде чем были отбиты султаном Ghiyas ud din Balban, девятым султаном мамлюков. Затем, в 1249 году, Мултан пал перед Карлугидами, но в том же году был захвачен Sher Khan. Затем Мултан был завоеван Izz al-Din Balban Kashlu Khan в 1254 году, прежде чем он восстал против султана Ghiyas ud din Balban в 1257 году и бежал в Ирак, где присоединился к монгольским войскам, снова захватил Мултан и разрушил его городские стены. Монголы вновь предприняли попытку вторжения в 1279 году, но потерпели решительное поражение. Alauddin Khalji из Дели отправил своего брата Ulugh Khan в 1296 году покорять Мултан, чтобы уничтожить оставшихся в живых членов семьи своего предшественника.
+    </code>
+  </details>
+  Lahore<br>
+  <details>
+    <summary>Sialkot</summary>
+    <code>
+  В 1200-х годах Сиалкот был единственным районом западного Пенджаба, которым правил Мамлюкский султанат в Дели.Этот район был захвачен Ghauri prince Yildiz, но в 1217 году был вновь захвачен султаном Iltutmish.Около 1223 года Jalal ad-Din Mingburnu, последний царь Хоразмийской династии Центральной Азии, бежавший от нашествия Чингисхана, ненадолго захватил Сиалкот и Лахор, а затем был изгнан войсками Илтутмиша в сторону Uch Sharif. В XIII веке Imam Ali-ul-Haq, самый почитаемый суфийский воин-святой Сиалкота, прибыл из Аравии, и начал свою миссионерскую деятельность в регионе, который успешно обратил большое количество индусов в ислам, тем самым превратив Сиалкот в преимущественно мусульманский город.
+    </code>
+  </details>
 </div>
 
 <div>
@@ -103,6 +131,10 @@
   язык Маратхи, Моди, 
   Девагири (Даулатабад)<br>
 </div>
+
+  <div>
+    <h3>Виджаянагар</h3>
+  </div>
 
 <div>
   <h3><a href="https://ru.wikipedia.org/wiki/%D0%90%D0%B9%D1%8E%D0%B1%D0%B8%D0%B4%D1%8B">Султанат Айюбидов. Ayyubid Sultanate(Mamluk Sultanate)</a></h3>
@@ -161,6 +193,7 @@
 
 <div>
   <h3>Карты исторические</h3>
+  <a href="https://portulan.ru/">portulan</a><br>
   <a href="http://history-maps.ru/">history-maps.ru</a><br>
   География К. Птоломея <br>
   Карта Аль Мамуна. до 883 г. <br>
