--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@ margin-bottom: .5rem;
   <td><a href="guitar/" title="Guitar"><img src="icons/guitar.png" alt="guitar"></a></td><td><a href="guitar/"> Гитара</a></td></tr>
 <tr>
   <td><a href="13century/" title="13century"><img src="icons/medieval.png" alt="13century"></a></td><td><a href="13century/"> 13й Век</a></td></tr>
+<tr>
+  <td><a href="linguistics/" title="Языкознание"><img src="" alt=""></a></td><td><a href="linguistics/"> Языкознание</a></td></tr>
 <!-- <a href="F1_Challenge/" title="formula 1"><img src="icons/f1.png" alt="formula 1"></a> -->
 <!-- <a href="Alpinism/" title="alpinisme"><img src="icons/alpinism.png" alt="alpinisme"></a> -->
 <!-- <a href="13vek.html" title="medieval"><img src="icons/medieval.png" alt="medieval"></a> -->
