--- a/programming/expressjs.html
+++ b/programming/expressjs.html
@@ -8,6 +8,8 @@
 
 <div>Server <pre><code>
 	npm install --save express
+    npm install express mongoose
+
 
 app.js
 	const express = require('express');
