--- a/programming/index.html
+++ b/programming/index.html
@@ -30,7 +30,7 @@
       <div>
 <div><a href="#c"><span>C</span></a></div>
 <div><a href="#typescript">
-    <img src="https://www.typescriptlang.org/assets/images/icons/favicon-32x32.png" alt="typescript">
+    <img src="../icons/typescript.svg" alt="typescript">
     <span>TypeScript</span></a></div>
 <div><a href="#javascript">
     <img src="../icons/js.svg" alt="javascript">
@@ -222,7 +222,6 @@
     Elixir <br>
     Phoenix <br>
     Phoenix LiveView <br>
-    <img src="../icons/wiki.svg" alt="">
     <a href="https://youtu.be/QwL2XHXHQl4">Фронтенд без JS</a><br>
     <pre><code>
 <%    %>
@@ -535,7 +534,7 @@ public class Home {
 </div>
 
 <div>
-    <a href="https://grunvald-shop.web.app/">Shop App</a>
+    <a href="https://grunvald-shop.web.app/">Shop App</a><br>
     <a href="https://mini-haber.web.app/">Mini Haber</a><br>
     <!-- <a href="../nitro/" target="_blank">Nitro</a><br> -->
     <a href="primery/visibility/" target="_blank">My Travel Site</a><br>
