--- a/programming/typescript.html
+++ b/programming/typescript.html
@@ -1,5 +1,5 @@
 <div id="pageTitle">TypeScript</div>
-<div id="pageLogo"><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html"><img src="https://www.typescriptlang.org/assets/images/icons/favicon-32x32.png" alt="typescript"></a></div>
+<div id="pageLogo"><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html"><img src="../icons/typescript.svg" alt="typescript"></a></div>
 
 <div>
     <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html">typescriptlang.org</a><br>
