--- a/sailing/index.html
+++ b/sailing/index.html
@@ -103,6 +103,10 @@ nav > a { font-size: inherit }
       </div>
     </div>
 
+    <div class="headDivTog">
+      <a href="#costume">Костюм 18</a>
+    </div>
+
     <div id="headerBar_toggle">
         <span></span>
         <span></span>
